<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@xml/mainback"
    tools:context=".AddUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/treadmill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Welcome to Fitness Tracker!"
                android:textColor="@color/colorWhite"

                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="We've detected this is your first use, Welcome!"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"

                android:text="Please Enter your Details Below"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="First Name"
                android:inputType="text"

                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>


            <EditText
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="Last Name"
                android:inputType="text"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/age"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="Age"
                android:inputType="number"
                android:layout_marginBottom="25dp"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>


            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite"
                android:hint="Your Current Weight"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite"
                android:hint="Your Height in cm"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </RadioGroup>


            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Begin"
                android:background="@drawable/rounded"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
