<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@xml/mainback"
    tools:context=".AddUser">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/sport" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/addWorkout"
                android:textColor="@color/colorWhite"

                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:weightSum="3"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/Day"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:hint="@string/day"
                android:inputType="number"
                android:maxLength="2"

                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/Month"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="@string/month"
                android:maxLength="2"

                android:inputType="number"

                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>
            <EditText
                android:id="@+id/Year"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="4"

                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>
        </LinearLayout>

            <EditText
                android:id="@+id/wDuration"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="@string/Duration"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>

            <EditText
                android:id="@+id/calBurned"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/colorWhite"
                android:hint="@string/calburn"
                android:inputType="number"
                android:layout_marginBottom="25dp"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/colorPrimaryDark"/>


            <EditText
                android:id="@+id/wDescription"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite"
                android:hint="@string/desc"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/newWork"
                android:background="@drawable/rounded"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
