...
    <string name="calburn">Calories Burnt</string>
    <string name="desc">Description</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="viewBMR">View BMR</string>
    <string name="workout">Workouts</string>
    <string name="viewbmi">View BMI</string>
    <string name="newWork">Add Workout</string>
    <string name="details">Your Details</string>
    <string name="day">Day - 00</string>
    <string name="month">Month - 00</string>
    <string name="year">Year - YYYY</string>
    <string name="stats">Your Stats</string>
    <string name="headerMain">"Welcome to Fitness Tracker "</string>
...
