...
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Back"
                android:background="@drawable/rounded"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/workoutlist"
                android:layout_width="407dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="10"
                android:scrollbars="vertical" />

...
